Added basic functionality: List of items, pull data from API. Division into Logic and View. Adding dependencies to Retrofit, Koin, Moshi, Gidle. Adding bindings.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">StackExchangeUsers</string>
+
+    <string name="users_api_url">https://api.stackexchange.com/2.3/</string>
+
+    <string name="no_data">No data available, please refresh</string>
+
+    <string name ="loading">Loading</string>
+    <string name ="refresh">Refresh</string>
+
 </resources>
